Set up index view and user authentication
- Added `Devise` gem to handle user authentication.
- Updated development environment config with default URL options, as per Devise instructions.
- Generated User model via Devise.
- Copied in Devise user authentication views for customization.
- Updated db schema via migration.
- Set root route to `Application#index` action.
- Added `#index` action to Application controller.
- Refactored sign in/up feature test for context.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<nav>
+  <ul id="account-management">
+    <li><%= link_to 'Sign in', new_user_session_path %></li>
+    <li><%= link_to 'Sign up', new_user_registration_path %></li>
+  </ul>
+</nav>
+
+<h5 class="notice"><%= notice %></h5>
+<h5 class="alert"><%= alert %></h5>
 <%= yield %>
 
 </body>
