--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <% if user_signed_in? %>
       <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
     <% else %>
+      <li><%= link_to 'Sign in with Facebook', user_omniauth_authorize_path(:facebook) %></li>
+      <li><%= link_to 'Sign in with Twitter', user_omniauth_authorize_path(:twitter) %></li>
       <li><%= link_to 'Sign in', new_user_session_path %></li>
       <li><%= link_to 'Sign up', new_user_registration_path %></li>
     <% end %>
